--- a/tools/band_finder/requirements.txt
+++ b/tools/band_finder/requirements.txt
@@ -4,5 +4,6 @@ imagehash ~= 4.2
 numpy ~= 1.20
 opencv-python ~= 4.5
 
-# For formatting:
+# For formatting and refactoring:
 black ~= 20.8b1
+rope ~= 0.18
